# data

./: .gitignore  README.md  REST.md  data.md  database.db  layer.md  pyproject.toml
fastapis/: Dockerfile  README.md  alembic.ini  compose.yml  local.env  pyproject.toml  pytest-coverage.txt  pytest.xml
fastapis/app/: .gitignore  main.py
fastapis/app/core/: config.py  db.py  doc.py  error.py  local.env  log.py  mongo.py  mysql.py  security.py  upload.py
fastapis/app/entity/: README.md  company.py  equipement_fuel.py  equipment.py  meta.py  power_speed_curve.py  user.py  vessel.py  vessel_data_upload.py
fastapis/app/model/: company.py  equipment.py  location.py  meta.py  mongo.py  power_speed_curve.py  speed.py  user.py  vessel.py  vessel_data_upload.py
fastapis/app/models/: company.py  equipment.py  equipment_fuel.py  master.py  meta.py  response.py  user.py  vessel.py
fastapis/app/router/: company.py  equipment.py  map.py  meta.py  mongo.py  power_speed_curve.py  speed.py  upload.py  user.py  vessel.py
fastapis/app/routers/: company.py  equipment.py  master.py  meta.py  user.py  vessel.py
fastapis/app/scripts/: company.sql  ddl.sql  dml.sql  equipement.sql  equipment_fuel.sql  meta.sql  user.sql  vessel.sql  副本八打雁202307.xlsx
fastapis/app/service/: company.py  cors.py  data.py  equipment.py  map.py  meta.py  mongo.py  power_speed_curve.py  speed.py  upload.py  user.py  vessel.py
fastapis/app/services/: company.py  equipment.py  master.py  meta.py  user.py  vessel.py
fastapis/migration/: README  README.md  env.py
fastapis/migration/versions/: 001_create_meta_data.py  002_insert_meta_data.py  005_create_vessel_table.py  (+8 more)
fastapis/src/: main.py
fastapis/tests/: conftest.py  test_company_crud.py  test_meta_r.py  test_upload_cr.py  test_user_crud.py  test_vessel_crud.py
(+44 files in other folders)
