[tool.poetry]
name = "fastapis"
version = "0.1.0"
description = ""
authors = ["Ming Li <leem7899@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.4"}
sqlmodel = "^0.0.22"
pymysql = "^1.1.1"
cryptography = "^43.0.3"
pydantic-settings = "^2.7.1"

[tool.poetry.group.dev.dependencies]
alembic = "^1.14.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
