[tool.poetry]
description = ""
authors = ["Ming Li <leem7899@163.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.4"}
sqlmodel = "^0.0.22"
pymysql = "^1.1.1"
cryptography = "^43.0.3"
pydantic-settings = "^2.7.1"
pandas = "^2.2.3"
pymongo = {extras = ["srv"], version = "^4.10.1"}
asgi-correlation-id = "^4.3.4"

[tool.poetry.group.dev.dependencies]
alembic = "^1.14.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120   